--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,17 @@ body {
   * {
     box-sizing: border-box;
   }
+
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  /* ::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background-color: #aaa;
+  } */
+
+  ::-webkit-scrollbar-thumb {
+    background: #444;
+    border-radius: 10px;
+  }
